# traypp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build_linux.yml  build_windows.yml
example/: simple.cpp
example/simple/: CMakeLists.txt  main.cpp
src/: tray.hpp
src/tray/: tray.cpp  tray.hpp
src/tray/linux/: appindicator.cpp  appindicator.hpp
src/tray/windows/: windows.cpp  windows.hpp
tray/include/: tray.hpp
tray/include/components/: button.hpp  imagebutton.hpp  label.hpp  separator.hpp  submenu.hpp  syncedtoggle.hpp  toggle.hpp
tray/include/core/: entry.hpp  icon.hpp  image.hpp  traybase.hpp
tray/include/core/linux/: tray.hpp
tray/include/core/windows/: tray.hpp
tray/src/components/: button.cpp  imagebutton.cpp  label.cpp  separator.cpp  submenu.cpp  syncedtoggle.cpp  toggle.cpp
tray/src/core/: entry.cpp  image.cpp  traybase.cpp
tray/src/core/linux/: icon.cpp  image.cpp  tray.cpp
tray/src/core/windows/: icon.cpp  image.cpp  tray.cpp
